Fix #31897: Ctrl+Click in 'Hue Correct' Node Adds in Wrong Location

Misusage of X/Y coords, ancient one!